@@ -5,6 +5,7 @@ import com.palmergames.bukkit.towny.TownyEconomyHandler;
 import com.palmergames.bukkit.towny.TownyMessaging;
 import com.palmergames.bukkit.towny.TownySettings;
 import com.palmergames.bukkit.towny.TownyUniverse;
+import com.palmergames.bukkit.towny.event.nation.NationPreTownLeaveEvent;
 import com.palmergames.bukkit.towny.exceptions.EconomyException;
 import com.palmergames.bukkit.towny.exceptions.NotRegisteredException;
 import com.palmergames.bukkit.towny.exceptions.TownyException;
@@ -239,5 +240,20 @@ public class FlagWarCustomListener implements Listener {
 		plugin.updateCache(worldCoord);
 
 		System.out.println(cell.getCellString());
+	}
+	
+	@EventHandler(priority = EventPriority.LOW, ignoreCancelled = true)
+	public void onTownLeaveNation(NationPreTownLeaveEvent event) {
+		if (FlagWarConfig.isAllowingAttacks()) {
+			if (FlagWar.isUnderAttack(event.getTown()) && TownySettings.isFlaggedInteractionTown()) {
+				event.setCancelMessage(Translation.of("msg_war_flag_deny_town_under_attack"));
+				event.setCancelled(true);
+			}
+	
+			if (System.currentTimeMillis() - FlagWar.lastFlagged(event.getTown()) < TownySettings.timeToWaitAfterFlag()) {
+				event.setCancelMessage(Translation.of("msg_war_flag_deny_recently_attacked"));
+				event.setCancelled(true);
+			}
+		}
 	}
 }
