@@ -5350,3 +5350,4 @@ v0.92.0.11:
 0.96.4.1:
   - es-419.yml updated by EuGNosii with PR #4471.
   - API: Add NationPreTownLeaveEvent.
+  - Have FlagWar and the Towny conquering feature use the NationPreTownLeaveEvent. 
